Refactor navigation structure and enhance project display for improved user experience

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         <h1>SJI Hack Club</h1>
         </a>
         </div>
-        <div>
-        <a href="https://discord.gg/Rdtf6uySFY" class="link">Join us!</a>
-        </div>
+        <nav>
+            <a href="projects.html">Our Projects</a>
+            <a href="students.html">Our Students</a>
+            <a href="experiences.html">Experiences</a>
+            <a href="https://discord.gg/Rdtf6uySFY">Join us!</a>
+        </nav>
     </header>
-    <section id="start">
+    <section class="textImage">
         <div id="intro">
             <h1>What if you could make</h1>
             <h1 class="highlight textCaro" id="ideas">...</h1>
@@ -30,17 +33,40 @@
         <image src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/4af649f129c342f0485a050a8ec43b86484f83e6_sjihctransp.png" id="sjihclogo">
     </section>
     <hr>
+    <main>
     <h2>A club where Josephians learn through projects</h2>
     <p>Students get to make projects and get grants for them, while learning new things along the way.</p>
+    <h3>Some of the workshops we host:</h3>
+    <section class="blocks">
+        <a class="block" href="https://boba.hackclub.com">
+            <img src="https://boba.hackclub.com/images/logo.svg" alt="Boba Drops">
+            <p>Build a website and get boba!</p>
+        </a>
+        <a class="block" href="https://sprig.hackclub.com">
+            <img src="https://sprig.hackclub.com/logo4.png" alt="Sprig">
+            <p>Build a JS game and play it on your own console.</p>
+        </a>
+        <a class="block" href="https://cider.hackclub.com">
+            <img src="https://cider.hackclub.com/logo.svg" alt="Cider">
+            <p>Create an iOS app and receive a $100 Apple Developer account to publish it.</p>
+        </a>
+    </section>
+    <hr>
     <h2>By students, for students</h2>
     <p>SJI Hack Club is run by Year 3-4 students, who host workshops and lead the club.</p>
+    <hr>
+    <section class="textImage">
+    <div width="60%">
     <h2>A part of a larger community</h2>
     <p>We are a part of 850+ clubs in 60+ countries, and the 9th in Singapore. <a href="https://hackclub.com">Learn more about Hack Club.</a></p>
-    <nav>
-        <a href="projects.html">Our Projects</a>
-        <a href="students.html">Our Students</a>
-        <a href="experiences.html">Experiences</a>
-    </nav>
+    </div>
+    <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/f45d87c7d0cb19ea5149e5e389c7e206e4b6572d_image.png" width="30%">
+    </section>
+    <hr>
+    <footer>
+        <a href="https://discord.gg/Rdtf6uySFY" class="joinButton">Click here to join us now!</a>
+    </footer>
+    </main>
     <script>
         const ideas = [
             "an app that reminds your class to do homework",
