--- a/projects.html
+++ b/projects.html
@@ -29,14 +29,14 @@
     <h2>Hack Club YSWSs (You Ship, We Ship)</h2>
     <p>We host various workshops supported by Hack Club. Here are some projects made by our students in Hack Club:</p>
     <h3>Apps</h3>
-    <section class="projects">
-        <a class="project" href="https://github.com/PhyoTP/Multicards">
+    <section class="blocks">
+        <a class="block" href="https://github.com/PhyoTP/Multicards">
             <h1>Multicards</h1>
             <h2>By Phyo Thet Pai</h2>
             <h3>For: Cider</h3>
             <p>A multi-dimensional flashcards app</p>
         </a>
-        <a class="project" href="https://github.com/PhyoTP/BurmAid">
+        <a class="block" href="https://github.com/PhyoTP/BurmAid">
             <h1>BurmAid</h1>
             <h2>By Phyo Thet Pai</h2>
             <h3>For: Cider</h3>
@@ -45,13 +45,19 @@
     </section>
     <!--TODO: move websites on top of apps once students start making websites-->
     <h3>Websites</h3>
-    <section class="projects">
-        <!-- <a class="project" href="https://sji.hackclub.com/">
+    <section class="blocks">
+        <!-- <a class="block" href="https://sji.hackclub.com/">
             <h1>SJI Hack Club</h1>
             <h2>By Phyo Thet Pai</h2>
             <p>The website of SJI Hack Club</p>
         </a> -->
-        <a class="project" href="https://github.com/PhyoTP/findthecodelangs-RUP">
+        <a class="block" href="https://github.com/JatinRakesh/Hackaccino_2024">
+            <h1>3 Bouncing cubes</h1>
+            <h2>By Jatin Rakesh</h2>
+            <h3>For: Hackaccino</h3>
+            <p>A website for Hackaccino 2024</p>
+        </a>
+        <a class="block" href="https://github.com/PhyoTP/findthecodelangs-RUP">
             <h1>Find the Code Langs</h1>
             <h2>By Phyo Thet Pai</h2>
             <h3>For: Hackaccino</h3>
