Refactor header structure and enhance layout for improved navigation and user experience

--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
     <link rel="icon" type="image/png" href="https://hc-cdn.hel1.your-objectstorage.com/s/v3/4af649f129c342f0485a050a8ec43b86484f83e6_sjihctransp.png">
 </head>
 <body>
-    <header>
-        <div>
-        <a href="https://hackclub.com">
-            <img src="https://assets.hackclub.com/flag-orpheus-left.svg" id="flag">
-        </a>
-        <a href="index.html" style="text-decoration: none; color: white;">
-        <h1>SJI Hack Club</h1>
-        </a>
-        </div>
-        <nav>
-            <a href="projects.html">Our Projects</a>
-            <a href="students.html">Our Students</a>
-            <a href="experiences.html">Experiences</a>
-            <a href="https://discord.gg/Rdtf6uySFY">Join us!</a>
-        </nav>
-    </header>
-    <section class="textImage">
-        <div id="intro">
-            <h1>What if you could make</h1>
-            <h1 class="highlight textCaro" id="ideas">...</h1>
-            <p>At SJI Hack Club, <b>it's possible.</b></p>
-        </div>
-        <image src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/4af649f129c342f0485a050a8ec43b86484f83e6_sjihctransp.png" id="sjihclogo">
-    </section>
+    <div class="start">
+        <header>
+            <div>
+            <a href="https://hackclub.com">
+                <img src="https://assets.hackclub.com/flag-orpheus-left.svg" id="flag">
+            </a>
+            <a href="index.html" style="text-decoration: none; color: white;">
+            <h1>SJI Hack Club</h1>
+            </a>
+            </div>
+            <nav>
+                <a href="projects.html">Our Projects</a>
+                <a href="students.html">Our Students</a>
+                <a href="experiences.html">Experiences</a>
+                <a href="https://discord.gg/Rdtf6uySFY">Join us!</a>
+            </nav>
+        </header>
+        <section class="textImage">
+            <div id="intro">
+                <h1>What if you could make</h1>
+                <h1 class="highlight textCaro" id="ideas">...</h1>
+                <p>At SJI Hack Club, <b>it's possible.</b></p>
+            </div>
+            <image src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/4af649f129c342f0485a050a8ec43b86484f83e6_sjihctransp.png" id="sjihclogo">
+        </section>
+    </div>
     <hr>
     <main>
     <h2>A club where Josephians learn through projects</h2>
