--- a/projects.html
+++ b/projects.html
@@ -9,22 +9,27 @@
     <link rel="apple-touch-icon" href="https://hc-cdn.hel1.your-objectstorage.com/s/v3/4af649f129c342f0485a050a8ec43b86484f83e6_sjihctransp.png">
 </head>
 <body>
-    <header>
-        <div>
-        <a href="https://hackclub.com">
-            <img src="https://assets.hackclub.com/flag-orpheus-left.svg" id="flag">
-        </a>
-        <a href="index.html" style="text-decoration: none; color: white;">
-        <h1>SJI Hack Club</h1>
-        </a>
-        </div>
-        <div>
-        <a href="https://discord.gg/Rdtf6uySFY" class="link">Join us!</a>
-        </div>
-    </header>
-    <section id="intro">
-        <h1>Our Projects</h1>
-    </section>
+    <div class="start">
+        <header>
+            <div>
+            <a href="https://hackclub.com">
+                <img src="https://assets.hackclub.com/flag-orpheus-left.svg" id="flag">
+            </a>
+            <a href="index.html" style="text-decoration: none; color: white;">
+            <h1>SJI Hack Club</h1>
+            </a>
+            </div>
+            <nav>
+                <a href="projects.html">Our Projects</a>
+                <a href="students.html">Our Students</a>
+                <a href="experiences.html">Experiences</a>
+                <a href="https://discord.gg/Rdtf6uySFY">Join us!</a>
+            </nav>
+        </header>
+        <section id="intro">
+            <h1>Our Projects</h1>
+        </section>
+    </div>
     <hr>
     <h2>Hack Club YSWSs (You Ship, We Ship)</h2>
     <p>We host various workshops supported by Hack Club. Here are some projects made by our students in Hack Club:</p>
